--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="row buttons">
                 <button class="clear-canvas">
                     <i class="fa-solid fa-xmark"></i>
-                    <span id="clearing">Clear Canvas</span>
+                    <span id="clearing">Clear Drawing</span>
                 </button>
                 <button class="save-img">
                     <i class="fa-solid fa-download"></i>
